src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;
.button-hover::after {
  content: "";
  height: 100%;
  width: 0%;
  background: #ffb400;
  position: absolute;
  top: 0;
  right: 0;
  border-radius: 999px;
  transition: 0.3s;
  z-index: -1;
}
.button-hover:hover:after {
  width: 100%;
  top: 0;
  right: 0;
}

.wait-for-response::before {
  content: "";
  height: 150%;
  width: 30px;
  background-color: rgba(255, 255, 255, 0.2);
  animation-name: waitingShine;
  animation-duration: 1s;
  animation-iteration-count: infinite;
  position: absolute;
  right: 100%;
  top: 50%;
  transform: translateY(-50%) rotate(-10deg);
  z-index: 5;
  box-shadow: 0px 0px 10px 10px #ffffff20;
}

@keyframes waitingShine {
  from {
    right: 100%;
  }
  to {
    right: -20%;
  }
}

.input:-internal-autofill-selected {
  display: none !important;
}

input:-webkit-autofill,
input:-webkit-autofill:hover,
input:-webkit-autofill:focus,
input:-webkit-autofill:active {
  -webkit-text-fill-color: #000000;
  box-shadow: 0 0 0 100px #e9e9e9 inset;
}

.dark input:-webkit-autofill,
.dark input:-webkit-autofill:hover,
.dark input:-webkit-autofill:focus,
.dark input:-webkit-autofill:active {
  -webkit-text-fill-color: #ffffff;
  box-shadow: 0 0 0 100px #252525 inset;
}

:root {
  /* Your default theme */
  --background: white;
  --foreground: black;
}

[data-theme="dark"] {
  --background: black;
  --foreground: white;
}

.placeholder-animation::after {
  content: "";
  width: 300%;
  height: 100%;
  position: absolute;
  right: 0;
  top: 0;
  background-image: linear-gradient(
    90deg,
    rgb(245, 245, 245),
    rgb(245, 245, 245),
    rgb(245, 245, 245),
    rgb(245, 245, 245),
    white,
    rgb(245, 245, 245),
    rgb(245, 245, 245),
    rgb(245, 245, 245),
    rgb(245, 245, 245)
  );
  animation: placeholder-animation;
  animation-duration: 1s;
  animation-iteration-count: infinite;
}
.dark .placeholder-animation::after {
  background-image: linear-gradient(
    90deg,
    rgb(20, 20, 20),
    rgb(20, 20, 20),
    rgb(20, 20, 20),
    rgb(20, 20, 20),
    rgb(30, 30, 30),
    rgb(20, 20, 20),
    rgb(20, 20, 20),
    rgb(20, 20, 20),
    rgb(20, 20, 20)
  );
}

@keyframes placeholder-animation {
  from {
    transform: translateX(0%);
  }
  to {
    transform: translateX(66.66%);
  }
}

